Fixing sonar violations for this project